--- a/align.html
+++ b/align.html
@@ -4,8 +4,9 @@
 <html>
 
 <head>
-<title>User Experience Designer (UX/UI) Kapiti Coast • Andi Parker</title>
+	<title>User Experience Designer (UX/UI) Kapiti Coast • Andi Parker</title>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="styles.css" />
 	<link href="https://fonts.googleapis.com/css?family=Chivo:400,400i,700,900&display=swap" rel="stylesheet">
 </head>
