--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="styles.css" />
 	<link href="https://fonts.googleapis.com/css?family=Chivo:400,400i,700,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
 	<section id="menu">
 
 		<ul>
-			<li class="selected">About</li>
+			<li><i class="fa fa-long-arrow-right"></i> About</li>
 			<li><a href="projects.html">Projects</a></li>
 			<li><a href="writings.html">Writings</a></li>
 			<li><a href="contact.html">Contact</a></li>
@@ -36,24 +37,28 @@
 
 		<p class="caption">Post-its and dot votes from a workshop with <a href="align.html">Align</a>.</p>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam purus leo, molestie ac cursus sit amet, pharetra in odio. Quisque condimentum nulla id elit facilisis, luctus volutpat mauris consectetur. Aliquam eu urna ex. Nulla venenatis, nunc tristique ultricies volutpat, justo ipsum elementum ligula, et pulvinar turpis orci vitae est. Pellentesque dignissim neque eget pulvinar vulputate. Donec venenatis, ipsum id maximus ultricies, odio lectus porta justo, in tincidunt libero odio in nisi. Etiam ut lacus blandit, mollis lorem non, mattis urna.</p>
+		<p>I've spent over 10 years as a designer and have seen almost any kind of situation you could think of. I've worked with national e-commerce giant <a href="http://www.trademe.co.nz" target="_blank">Trade Me</a>, various <a href="http://www.catchdesign.co.nz" target="_blank">design agencies</a> and many other product shops, each in different stages of their life cycle (see the details <a href="">in my CV</a>). If there's one thing I've learned: <strong>design needs to respond to the environment in which it lives or it dies a quick death.</strong></p>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam purus leo, molestie ac cursus sit amet, pharetra in odio. Quisque condimentum nulla id elit facilisis, luctus volutpat mauris consectetur. Aliquam eu urna ex. Nulla venenatis, nunc tristique ultricies volutpat, justo ipsum elementum ligula, et pulvinar turpis orci vitae est. Pellentesque dignissim neque eget pulvinar vulputate. Donec venenatis, ipsum id maximus ultricies, odio lectus porta justo, in tincidunt libero odio in nisi. Etiam ut lacus blandit, mollis lorem non, mattis urna.</p>
+		<p>What does that mean? My take is that design thinking, approaches and processes can't stagnate or be immovable. Design needs to adjust to the way the developers work, the business needs and the methods the target market approach the product with.</p>
+
+		<p>My perspective on design has shifted over the years. I used to think design's job was to make things look good and "feel nice." Now, however, I've come to realise that design's primary goal is to solve problems – business problems, usability problems, retention problems and, yes, visual problems too. Making things look nice is the last step in a wide ranging set of questions and decisions which help a designer find the solution needed.</p>
+
+		<p>Therefore, design needs to take a wholistic approach and really understand the <strong>why</strong> before making any decisions. This is what I try to do and, hopefully, do it well.</p>
 
 		<h2>Skillset (in alphabetical order):</h2>
 
 		<ul>
-			<li style="text-decoration:line-through; display: none;">Back-end Coding</li>
-			<li>Branding & Logos</li>
-			<li>Front-end Coding (HTML & CSS)</li>
+			<li>Branding & logos</li>
+			<li>Front-end coding (HTML & CSS)</li>
 			<li>Giphy</li>
-			<li>Interactive Prototypes</li>
+			<li>Interactive prototypes</li>
 			<li>jQuery</li>
-			<li>Stakeholder Workshops</li>
+			<li>Playing metal in my headphones</li>
+			<li>Stakeholder workshops</li>
 			<li>Styleguides</li>
-			<li>User Experience (UX)</li>
-			<li>User Interface (UI)</li>
-			<li>User Research</li>
+			<li>User experience design (UX)</li>
+			<li>User interface design (UI)</li>
+			<li>User research</li>
 			<li>Wireframes</li>
 			<li>Writing</li>
 		</ul>
