--- a/align.html
+++ b/align.html
@@ -9,6 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="styles.css" />
 	<link href="https://fonts.googleapis.com/css?family=Chivo:400,400i,700,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -28,6 +29,8 @@
 
 		<h1><a href="index.html">Andi Parker.</a></h1>
 
+		<p class="caption"><a href="projects.html">Projects</a> > Align</p>
+
 		<h2>Right back to the drawing board.</h2>
 
 		<p>I was asked to help <a href="http://www.align.net.nz" target="_blank">Align</a> redesign their website with a fresh new approach, leading to a fresh new look, while keeping the core of their style and sensibilities.</p>
@@ -38,12 +41,21 @@
 		<p class="caption">Initial scribbles from Align's bossman.</p>
 
 		<img src="images/align_ws2.jpg">
-		<p class="caption">A post-it per perceived company value – I like to think the thumbsup was meant for me.</p>
+		<p class="caption">A post-it per perceived company value – the thumbsup was for me.</p>
 		
 		<img src="images/about_hero.jpg">
 		<p class="caption">Dot votes to see where the focus should be.</p>
 
-		<p>Once the focus was set, it was time to get into wireframing (a basic design without any colour or styling) in order to get a feel for the content, layout and flow of information. One of the major decisions was to use elements of <a href="https://rustygeorge.com/undesigned-design-so-bad-its-good/" target="_blank">undesign</a> (a seemingly, and somewhat ironically, <span style="font-style:italic;">unaligned</span> and random display of elements on the page) for the new website's style, to reflect the out-of-the-box thinking Align takes with its projects.</p>
+		<p>Once the website's focus was set, it was time to get into wireframing (a basic design without any colour or styling) in order to get a feel for how the content, layout and information flow works.</p>
+
+		<img src="images/align_wf.jpg">
+		<p class="caption">Basic wireframe.</p>
+
+		<p>One of the major decisions in designing the UI was to use elements of <a href="https://rustygeorge.com/undesigned-design-so-bad-its-good/" target="_blank">undesign</a> (a seemingly, and somewhat ironically, <am>unaligned</em> and random display of elements on the page) for the new website's style, to reflect the out-of-the-box thinking Align takes with its projects.</p>
+
+		<p>Check out how it turned out.</p>
+
+		<button onclick="window.open('http://www.align.net.nz','_blank')">Visit site<i class="fa fa-long-arrow-right"></i></button>
 
 		<p class="copyright_menu">
 			<a href="index.html"> Home</a> | 
