--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="styles.css" />
 	<link href="https://fonts.googleapis.com/css?family=Chivo:400,400i,700,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
 			<li><a href="about.html">About</a></li>
 			<li><a href="projects.html">Projects</a></li>
 			<li><a href="writings.html">Writings</a></li>
-			<li class="selected">Contact</li>
+			<li><i class="fa fa-long-arrow-right"></i> Contact</li>
 		</ul>
 
 	</section>
@@ -30,12 +31,12 @@
 
 		<h2>Contact forms are hard!</h2>
 
-		<p>I tried. I really tried to build an email form that looked nice and worked, but apparently to make it <span style="font-style:italic;">actually work</span>, you have to do lots of backend coding, which I can't do.</p>
+		<p>I tried. I really tried to build an email form that looked nice and worked, but apparently to make it <em>actually work</em>, you have to do lots of backend coding, which I can't do.</p>
 
 		<p>Instead, just go to my LinkedIn page. You can get in touch with me from there.</p>
 
-		<button onclick="window.window.open('https://www.linkedin.com/in/andikparker','_blank')" class="linkedin">LinkedIn</button>
-		<button onclick="window.open('images/resume.pdf','_blank')">Download CV</button>
+		<button onclick="window.window.open('https://www.linkedin.com/in/andikparker','_blank')" class="linkedin"><i class="fa fa-linkedin"></i>View profile</button>
+		<button onclick="window.open('images/resume.pdf','_blank')"><i class="fa fa-download"></i>Download CV</button>
 
 		<p class="copyright_menu">
 			<a href="index.html"> Home</a> | 
