--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 		<img src="images/home_hero.jpg">
 
-		<p class="caption">This is not my stuff, but if it was I bet you'd think I was real profesh.</p>
+		<p class="caption">This is not my stuff, but if they were I bet you'd think I was real profesh.</p>
 
 		<p class="copyright_menu">
 			<a href="about.html">About</a> | 
