--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="styles.css" />
 	<link href="https://fonts.googleapis.com/css?family=Chivo:400,400i,700,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
 
 		<ul>
 			<li><a href="about.html">About</a></li>
-			<li class="selected">Projects</li>
+			<li><i class="fa fa-long-arrow-right"></i> Projects</li>
 			<li><a href="writings.html">Writings</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
@@ -28,27 +29,21 @@
 
 		<h1><a href="index.html">Andi Parker.</a></h1>
 
-		<h2><a href="minim.html">Minim</a></h2>
-
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam purus leo, molestie ac cursus sit amet, pharetra in odio.</p>
-
-		<img src="images/minim.jpg">
-
 		<h2><a href="align.html">Align</a></h2>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam purus leo, molestie ac cursus sit amet, pharetra in odio.</p>
+		<p>Right back to the drawing board.</p>
 
 		<img src="images/align.jpg">
 
 		<h2><a href="veterans.html">Veterans' Affairs</a></h2>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam purus leo, molestie ac cursus sit amet, pharetra in odio.</p>
+		<p>Giving back to those who gave so much for us.</p>
 
 		<img style="overlay" src="images/veterans.jpg">
 
 		<h2><a href="crichq.html">CricHQ</a></h2>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam purus leo, molestie ac cursus sit amet, pharetra in odio.</p>
+		<p>Scoring cricket matches in real-time.</p>
 
 		<img style="overlay" src="images/crichq.jpg">
 
@@ -57,8 +52,8 @@
 		<p>There are many more projects I could highlight and expound upon, but the above should give you an idea of what I can do and how I do it as part of a talented team.</p>
 
 		<p class="copyright_menu">
-			<a href="index.html"> Home</a> | 
-			<a href="about.html"> About</a> |
+			<a href="about.html">Home</a> |
+			<a href="about.html">About</a> |
 			<a href="projects.html">Projects</a> |
 			<a href="writings.html">Writings</a> |
 			<a href="contact.html">Contact</a>
