--- a/writings.html
+++ b/writings.html
@@ -9,6 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="styles.css" />
 	<link href="https://fonts.googleapis.com/css?family=Chivo:400,400i,700,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
 		<ul>
 			<li><a href="about.html">About</a></li>
 			<li><a href="projects.html">Projects</a></li>
-			<li class="selected">Writings</li>
+			<li><i class="fa fa-long-arrow-right"></i> Writings</li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 
@@ -28,7 +29,7 @@
 
 		<h1><a href="index.html">Andi Parker.</a></h1>
 
-		<h2>I even wrote about UX once.</h2>
+		<h2>I wrote about UX once.</h2>
 
 		<p>... and it got featured in the <a href="https://uxdesign.cc/" target="_blank"> UX Collective</a>!</p>
 
@@ -39,11 +40,17 @@
 		<p>An excerpt:</p>
 		<p>If you’re like me — a UX designer — you get asked to describe user experience quite often by colleagues, clients, friends and your interested-but-still-unable-to-fathom-it mother. I used to find it difficult to describe UX in a succinct way. I would stumble over words and my hands would swing in the air as I gesticulated dramatically to demonstrate interactions and flow and layout. Basically… I had no easy way to describe a good user experience...</p>
 
-		<button onclick="window.open('https://uxdesign.cc/the-5-ingredients-you-need-to-craft-a-great-user-experience-c35a950a239e','_blank')">Read article</button>
+		<button onclick="window.open('https://uxdesign.cc/the-5-ingredients-you-need-to-craft-a-great-user-experience-c35a950a239e','_blank')">Read article<i class="fa fa-long-arrow-right"></i></button>
 
-		<h2>I know, It's lonely here...</h2>
+		<h2>I also wrote a short film.</h2>
 
-		<p>In my defense, I have spent a lot of my spare time over the last few years doing creative writing so I haven't done much more writing about design, but perhaps I'll build a collection.</p>
+		<p>... which placed in the top 4 of the LA-based <a href="http://www.filmaka.com" target="_blank">Filmaka</a> <em>Fantasy Web Series</em> competition!</p>
+
+		<img src="images/mttf.jpg">
+
+		<p class="caption"><em>Moth to the Flame</em>, directed by Richard Turner.</p>
+
+		<button onclick="window.open('https://www.filmaka.com/films.php?page=currentsubmissions&contest=542&film_id=29385','_blank')"><i class="fa fa-play"></i>Watch film</button>
 
 		<p class="copyright_menu">
 			<a href="index.html"> Home</a> | 
