--- a/contact.html
+++ b/contact.html
@@ -38,13 +38,14 @@
 		<button onclick="window.window.open('https://www.linkedin.com/in/andikparker','_blank')" class="linkedin"><i class="fa fa-linkedin"></i>View profile</button>
 		<button onclick="window.open('images/resume.pdf','_blank')"><i class="fa fa-download"></i>Download CV</button>
 
-		<p class="copyright_menu">
-			<a href="index.html"> Home</a> | 
-			<a href="about.html"> About</a> | 
-			<a href="projects.html">Projects</a> |
-			<a href="writings.html">Writings</a> |
-			<a href="contact.html">Contact</a>
-		</p>
+		<ul class="copyright_menu">
+			<hr>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="writings.html">Writings</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
 
 		<p class="copyright">© Andi Parker. All rights reserved.</p>
 
