--- a/crichq.html
+++ b/crichq.html
@@ -58,13 +58,14 @@
 
 		<button onclick="window.open('https://www.youtube.com/embed/y2Cu8GGr65I','_blank')"><i class="fa fa-play"></i> Watch video</button>
 
-		<p class="copyright_menu">
-			<a href="index.html">Home</a> | 
-			<a href="about.html">About</a> |
-			<a href="projects.html">Projects</a> |
-			<a href="writings.html">Writings</a> |
-			<a href="contact.html">Contact</a>
-		</p>
+		<ul class="copyright_menu">
+			<hr>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="writings.html">Writings</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
 
 		<p class="copyright">© Andi Parker. All rights reserved.</p>
 
