--- a/writings.html
+++ b/writings.html
@@ -52,13 +52,14 @@
 
 		<button onclick="window.open('https://www.filmaka.com/films.php?page=currentsubmissions&contest=542&film_id=29385','_blank')"><i class="fa fa-play"></i>Watch film</button>
 
-		<p class="copyright_menu">
-			<a href="index.html"> Home</a> | 
-			<a href="about.html"> About</a> | 
-			<a href="projects.html">Projects</a> |
-			<a href="writings.html">Writings</a> |
-			<a href="contact.html">Contact</a>
-		</p>
+		<ul class="copyright_menu">
+			<hr>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="writings.html">Writings</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
 
 		<p class="copyright">© Andi Parker. All rights reserved.</p>
 
