--- a/about.html
+++ b/about.html
@@ -63,13 +63,14 @@
 			<li>Writing</li>
 		</ul>
 
-		<p class="copyright_menu">
-			<a href="index.html"> Home</a> | 
-			<a href="about.html"> About</a> |
-			<a href="projects.html">Projects</a> |
-			<a href="writings.html">Writings</a> |
-			<a href="contact.html">Contact</a>
-		</p>
+		<ul class="copyright_menu">
+			<hr>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="writings.html">Writings</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
 
 		<p class="copyright">© Andi Parker. All rights reserved.</p>
 
