--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
 
 		<p class="caption">This is not my stuff, but if they were I bet you'd think I was real profesh.</p>
 
-		<p class="copyright_menu">
-			<a href="about.html">About</a> | 
-			<a href="projects.html">Projects</a> | 
-			<a href="writings.html">Writings</a> | 
-			<a href="contact.html">Contact</a>
-		</p>
+		<ul class="copyright_menu">
+			<hr>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="writings.html">Writings</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
 
 		<p class="copyright">© Andi Parker. All rights reserved.</p>
 
