--- a/projects.html
+++ b/projects.html
@@ -51,13 +51,14 @@
 
 		<p>There are many more projects I could highlight and expound upon, but the above should give you an idea of what I can do and how I do it as part of a talented team.</p>
 
-		<p class="copyright_menu">
-			<a href="about.html">Home</a> |
-			<a href="about.html">About</a> |
-			<a href="projects.html">Projects</a> |
-			<a href="writings.html">Writings</a> |
-			<a href="contact.html">Contact</a>
-		</p>
+		<ul class="copyright_menu">
+			<hr>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="writings.html">Writings</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
 
 		<p class="copyright">© Andi Parker. All rights reserved.</p>
 
