--- a/veterans.html
+++ b/veterans.html
@@ -49,13 +49,14 @@
 
 		<button onclick="window.open('http://www.veteransaffairs.mil.nz','_blank')">Visit site<i class="fa fa-long-arrow-right"></i></button>
 
-		<p class="copyright_menu">
-			<a href="index.html">Home</a> | 
-			<a href="about.html">About</a> |
-			<a href="projects.html">Projects</a> |
-			<a href="writings.html">Writings</a> |
-			<a href="contact.html">Contact</a>
-		</p>
+		<ul class="copyright_menu">
+			<hr>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="writings.html">Writings</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
 
 		<p class="copyright">© Andi Parker. All rights reserved.</p>
 
