--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
 		<p>My perspective on design has shifted over the years. I used to think design's job was to make things look good and "feel nice." Now, however, I've come to realise that design's primary goal is to solve problems – business problems, usability problems, retention problems and, yes, visual problems too. Making things look nice is the last step in a wide ranging set of questions and decisions which help a designer find the solution needed.</p>
 
-		<p>Therefore, design needs to take a wholistic approach and really understand the <strong>why</strong> before making any decisions. This is what I try to do and, hopefully, do it well.</p>
+		<p>Therefore, design needs to take a holistic approach and really understand the <strong>why</strong> before making any decisions. This is what I try to do and, hopefully, do it well.</p>
 
 		<h2>Skillset (in alphabetical order):</h2>
 
