--- a/align.html
+++ b/align.html
@@ -41,7 +41,7 @@
 		<p class="caption">Initial scribbles from Align's bossman.</p>
 
 		<img src="images/align_ws2.jpg">
-		<p class="caption">A post-it per perceived company value – the thumbsup was for me.</p>
+		<p class="caption">A post-it per perceived company value – the thumbs up was for me.</p>
 		
 		<img src="images/about_hero.jpg">
 		<p class="caption">Dot votes to see where the focus should be.</p>
