--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
 		<h2>Contact forms are hard!</h2>
 
-		<p>I tried. I really tried to build an email form that looked nice and worked, but apparently to make it <em>actually work</em>, you have to do lots of backend coding, which I can't do.</p>
+		<p>I tried. I really tried to build an email form that looked nice and worked, but apparently to make it <em>actually work</em>, you have to do lots of back-end coding, which I can't do.</p>
 
 		<p>Instead, just go to my LinkedIn page. You can get in touch with me from there.</p>
 
