--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,37 @@
 
 		<p>There are many more projects I could highlight and expound upon, but the above should give you an idea of what I can do and how I do it as part of a talented team.</p>
 
+		<p>Below are some wonderful companies I've been privileged to work with (in alphabetical order):</p>
+
+		<img class="mini_left" src="images/acc.jpg">
+		<img class="mini_right" src="images/archives.jpg">
+
+		<div class="clear"></div>
+
+		<img class="mini_left" src="images/consumer.jpg">
+		<img class="mini_right" src="images/chq.jpg">
+
+		<div class="clear"></div>
+
+		<img class="mini_left" src="images/dia.jpg">
+		<img class="mini_right" src="images/doc.jpg">
+
+		<div class="clear"></div>
+
+		<img class="mini_left" src="images/fenz.jpg">
+		<img class="mini_right" src="images/kiwirail.jpg">
+
+		<div class="clear"></div>
+
+		<img class="mini_left" src="images/moj.jpg">
+		<img class="mini_right" src="images/silverstripe.jpg">
+
+		<div class="clear"></div>
+
+		<img class="mini_left" src="images/trademe.jpg">
+
+		<div class="clear"></div>
+
 		<ul class="copyright_menu">
 			<hr>
 			<li><a href="index.html">Home</a></li>
