--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 		<p>Instead, just go to my LinkedIn page. You can get in touch with me from there.</p>
 
 		<button onclick="window.window.open('https://www.linkedin.com/in/andikparker','_blank')" class="linkedin"><i class="fa fa-linkedin"></i>View profile</button>
-		<button onclick="window.open('images/resume.pdf','_blank')"><i class="fa fa-download"></i>Download CV</button>
+		<button onclick="window.open('images/andi_parker_cv_2019.pdf','_blank')"><i class="fa fa-download"></i>Download CV</button>
 
 		<ul class="copyright_menu">
 			<hr>
