--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
 		<p class="caption">Post-its and dot votes from a workshop with <a href="align.html">Align</a>.</p>
 
-		<p>I've spent over 10 years as a designer and have seen almost any kind of situation you could think of. I've worked with national e-commerce giant <a href="http://www.trademe.co.nz" target="_blank">Trade Me</a>, various <a href="http://www.catchdesign.co.nz" target="_blank">design agencies</a> and many other product shops, each in different stages of their life cycle (see the details <a href="">in my CV</a>). If there's one thing I've learned: <strong>design needs to respond to the environment in which it lives or it dies a quick death.</strong></p>
+		<p>I've spent over 10 years as a designer and have seen almost any kind of situation you could think of. I've worked with national e-commerce giant <a href="http://www.trademe.co.nz" target="_blank">Trade Me</a>, various <a href="http://www.catchdesign.co.nz" target="_blank">design agencies</a> and many other product shops, each in different stages of their life cycle (see the details <a href="images/andi_parker_cv_2019.pdf" target="_blank">in my CV</a>). If there's one thing I've learned: <strong>design needs to respond to the environment in which it lives or it dies a quick death.</strong></p>
 
 		<p>What does that mean? My take is that design thinking, approaches and processes can't stagnate or be immovable. Design needs to adjust to the way the developers work, the business needs and the methods the target market approach the product with.</p>
 
