--- a/writings.html
+++ b/writings.html
@@ -48,7 +48,7 @@
 
 		<img src="images/mttf.jpg">
 
-		<p class="caption"><em>Warning: contains a scary scene with a demon.</p>
+		<p class="caption"><strong>Warning:</strong> contains a scary scene with a demon.</p>
 
 		<button onclick="window.open('https://www.filmaka.com/films.php?page=currentsubmissions&contest=542&film_id=29385','_blank')"><i class="fa fa-play"></i>Watch film</button>
 
