--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,8 @@
 
 		<div class="clear"></div>
 
-		<img class="mini_left" src="images/trademe.jpg">
+		<img class="mini_left" src="images/tourwriter.jpg">
+		<img class="mini_right" src="images/trademe.jpg">
 
 		<div class="clear"></div>
 
